# glusterfs

./: configure.ac
cli/src/: Makefile.am  cli-cmd-volume.c  cli-cmd.c  cli-cmd.h  cli-rpc-ops.c  cli-sync-cmd.c  cli-sync-cmd.h  cli-syncrpc-ops.c  cli-syncrpc-ops.h  cli-xml-output.c
glusterfsd/src/: glusterfsd-mgmt.c
libglusterfs/src/: dict.h  mem-types.h
rpc/rpc-lib/src/: protocol-common.h
rpc/rpc-transport/: Makefile.am
rpc/rpc-transport/socket/src/: name.c  socket.c  socket.h
rpc/rpc-transport/zmq-trans/src/: Makefile.am  zmq-trans.c  zmq-trans.h
rpc/rpc-transport/zmq/src/: Makefile.am  gf-zmq.c  zmq.c  zmq.h
xlators/features/barrier/src/: barrier.c
xlators/mgmt/glusterd/src/: glusterd-brick-ops.c  glusterd-handler.c  glusterd-handshake.c  glusterd-op-sm.c  glusterd-peer-utils.c  glusterd-peer-utils.h  glusterd-replace-brick.c  glusterd-rpc-ops.c  glusterd-sm.c  glusterd-sm.h  glusterd-store.c  glusterd-store.h  glusterd-syncop.c  glusterd-utils.c  glusterd-utils.h  glusterd-volgen.c  glusterd-volgen.h  glusterd-volume-ops.c  glusterd-volume-set.c  glusterd.h
xlators/protocol/client/src/: client-handshake.c  client.c  client.h
